--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
 
       <ul id="menu1">
-        <img src="images/logoofficiel.png" alt="logo">
+        <img src="/assets/images/logoofficiel.png" alt="logo">
         <li>Features</li>
         <li>Pricing</li>
         <li>More+</li>
@@ -41,25 +41,25 @@
   <div class="listefonctions">
 
     <article>
-      <img src="images/list.png" alt="">
+      <img src="assets/images/list.png" alt="">
       <p><strong>Task Management</strong></p>
       <p>Stay organized with an advanced to-do list and track your project.</p>
     </article>
 
     <article>
-      <img src="images/smartphone.png" alt="">
+      <img src="assets/images/smartphone.png" alt="">
       <p><strong>Team Collaboration</strong></p>
       <p>Efficiently work together with your team to deliver top-notch results.</p>
     </article>
 
     <article>
-      <img src="images/stopwatch.png" alt="">
+      <img src="assets/images/stopwatch.png" alt="">
       <p><strong>Time Tracking</strong></p>
       <p>Track every time of your work and bill clients accordingly.</p>
     </article>
 
     <article>
-      <img src="images/file.png" alt="">
+      <img src="assets/images/file.png" alt="">
       <p><strong>Invoicing</strong></p>
       <p>Easly issue invoices for your work, save time, and get praid.</p>
     </article>
@@ -81,7 +81,7 @@
 
   <div class="screen">
 
-    <img src="images/screen.png" alt="">
+    <img src="assets/images/screen.png" alt="">
 
   </div>
 
@@ -96,7 +96,7 @@
 
 
     <article>
-      <img src="images/calendar.png" alt="">
+      <img src="assets/images/calendar.png" alt="">
       <p><strong>Monthly plans</strong></p>
       <ul>
         <li>In the cloud</li>
@@ -108,7 +108,7 @@
     </article>
 
     <article>
-      <img src="images/cadenas.png" alt="">
+      <img src="assets/images/cadenas.png" alt="">
       <p><strong>Monthly plans</strong></p>
       <ul>
         <li>Installs on your own server</li>
@@ -125,10 +125,10 @@
     <p>For more than 10 years, we've been trusted by over 200,000 people in compagnies ranging from small businesses to
       Fortune 500 members, universities and government institutions.</p>
     <ul>
-      <li><img src="images/adobe.png" alt="adobe"></li>
-      <li><img src="images/harvard.png" alt="harvard"></li>
-      <li><img src="images/intel.png" alt="intel"></li>
-      <li><img src="images/nasa.png" alt="nasa"></li>
+      <li><img src="assets/images/adobe.png" alt="adobe"></li>
+      <li><img src="assets/images/harvard.png" alt="harvard"></li>
+      <li><img src="assets/images/intel.png" alt="intel"></li>
+      <li><img src="assets/images/nasa.png" alt="nasa"></li>
     </ul>
   </div>
 
